# ioCryptoBot

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: background_worker.py  crypto_parser.py  database.py  enver.py  handlers.py  main.py  states.py
src/stuff/: init.sql
